# physics_data_analysis

./: README.md
B0_phi_KS0-demo/: .gitignore  ReadMe
B0_phi_KS0-demo/B02phiKS0MC/: B02phiKS0_EventGeneration.py  ReadMe
B0_phi_KS0-demo/B02phiKS0MC/100_2k_evts/: rm_dirs.sh  submit_jobs.sh
B0_phi_KS0-demo/B02phiKS0MC/Multi_ch_noPhotos/: Multi_ch_noPhotos.dec  genMulti_Ch.py
B0_phi_KS0-demo/B02phiKS0MC/Pure_signal_noPhotos/: Signal_noPhotos.dec  genSignal.py
B0_phi_KS0-demo/Full_reco/train_BDTG/: Ale30Vars.txt  CompareResponse.C  GetResponse.C  OptimizeCut.C  RunThisDir.sh  TrainBDTG.C
B0_phi_KS0-demo/SigMC_phiKs_cutFlow/getNtuple/: Poseidon_reco.py  SigMC_B0_noUpdate.py  runReco.sh
B0_phi_KS0-demo/toolkit/: ReadMe  gitCommands.txt
DX_BR-demo/: .gitignore  ReadMe
DX_BR-demo/Tag_side_reco/: TODOs
PHENIX_demo/JetSubstructure/: README.txt
PHENIX_demo/PC_cuts/: RocToPlots.C  flipROC.C  makeMap_simp.C  mapPlot.C  run12_dat.root  run12_deadPC1.txt  run12_deadPC3.txt  run12_sim.root  run13_deadPC1.txt  run13_deadPC3.txt  run13_sim.root
PHENIX_demo/getPCdead/: Get_PadDeadCh.C  ISUJetTrkClus.C
PHENIX_demo/intros/: Analysis.C  Plots.C  Tutorial1.C  Tutorial2.C  outTutorial1.root  sartre_pAu_plots.root
PHENIX_demo/isuJets/: ReadMe.txt
PHENIX_demo/isuJets/PythiaParticles/: Makefile.am  PythiaParticles.C  PythiaParticles.h  PythiaParticlesLinkDef.h  autogen.sh  configure.ac  generatePythia.C
PHENIX_demo/isuJets/anaISUJetTrkClus/makeJets/: MakeJets.C  MakeJets.h  MakePlots.C  Makefile.am  PHENIXFilter.cpp  PHENIXFilter.h  ReadMe.txt  TMVARegression_MLP.weights.Run12.xml  TMVARegression_MLP.weights.Run13.xml  configure.ac  main.C  readArrayJets.C  readCondor.C  readHistos.C  runReadHistos.csh  splitTruthJets.C
klm_calibration-demo/: ReadMe
myB2Ana-demo/: .gitignore  README.md
myB2Ana-demo/B0_phi_K0/: ReadMe
myB2Ana-demo/DX_reco/: README.md
(+1221 files in other folders)
